# awRevoltDesktopSample

./: .gitignore  CMakeLists.txt  buildTest.sh
assets/: testMap.json
assets/meshes/: CharSphereWalk2.dae  CharTex.dae  MapDe.dae  MapDe.fbx  MapDe.mtl  MatStreet.dae  airplane1.fbx  char_col.dae  char_col2.dae  cubeanim3.dae  unitSphere.fbx  walk_col.dae
assets/shaders/: anim.vert  color.frag  createShadowMap.frag  simple.frag  simple.vert  static.vert  test.txt  textureLight.frag
assets/textures/meshes/: TexturesCom_1.5x1.5_RockyDirt1B_512_albedo.tif
src/: main.cpp  testState.cpp  testState.hpp
